@@ -132,7 +132,7 @@
 						<div class="col-sm-9">
 							<div class="input-group">
 								<span class="input-group-addon glyphicon glyphicon-book"></span>
-								<input type="text" class="form-control" id="title" placeholder="Enter the keywords on the title">
+								<input type="text" class="form-control" name="title" id="title" placeholder="Enter the keywords on the title" value="">
 							</div>
 						</div>
 					</div>
@@ -141,7 +141,7 @@
 						<div class="col-sm-9">
 							<div class="input-group">
 								<span class="input-group-addon glyphicon glyphicon-book"></span>
-								<input type="text" class="form-control" id="isbn" placeholder="Enter the ISBN (either ISBN-10 or ISBN-13)">
+								<input type="text" class="form-control" name="isbn" id="isbn" placeholder="Enter the ISBN (either ISBN-10 or ISBN-13)" value="">
 							</div>
 						</div>
 					</div>
@@ -150,7 +150,7 @@
 						<div class="col-sm-9">
 							<div class="input-group">
 								<span class="input-group-addon glyphicon glyphicon-user"></span>
-								<input type="text" class="form-control" id="author" placeholder="Who write this book">
+								<input type="text" class="form-control" name="author" id="author" placeholder="Who write this book" value="">
 							</div>
 						</div>
 					</div>
@@ -159,7 +159,7 @@
 						<div class="col-sm-9">
 							<div class="input-group">
 								<span class="input-group-addon glyphicon glyphicon-briefcase"></span>
-								<input type="text" class="form-control" id="publisher" placeholder="Which company publish this book">
+								<input type="text" class="form-control" name="publish" id="publisher" placeholder="Which company publish this book" value="">
 							</div>
 						</div>
 					</div>
@@ -167,23 +167,98 @@
 						<label for="lendingtype" class="col-sm-3 control-label">Material type</label>
 						<div class="col-sm-9">
 							<div class="radio">
-								<label class="radio-inline"><input type="radio" name="optlendingtype">Lending</label>
-								<label class="radio-inline"><input type="radio" name="optlendingtype">Reference</label>
+								<label class="radio-inline"><input type="radio" name="optlendingtype" value="LEN">Lending</label>
+								<label class="radio-inline"><input type="radio" name="optlendingtype" value="REF">Reference</label>
 							</div>
 						</div>
 					</div>
 					<div class="form-group">
 						<label for="classification" class="col-sm-3 control-label">Material classifications (more than one classifications can be selected):</label>
 						<div class="col-sm-9">
-							<select multiple class="form-control" id="optclassification">
-								<option value="">1</option>
-								<option value="">2</option>
-								<option value="">3</option>
-								<option value="">4</option>
-								<option value="">5</option>
+							<select multiple class="form-control" size="20" name="selectclass" id="optclassification">
+								<!--All followed with LoC Scheme (simplified)-->
+								<!--Class A Group-->
+								<option value="A">Class A - General Works</option>
+								<option value="AE">Class AE - Encyclopedias</option>
+								<option value="AY">Class AY - Yearbooks, Almanacs</option>
+								<!--Class B Group-->
+								<option value="B">Class B - Philosophy</option>
+								<option value="BF">Class BF - Phychology</option>
+								<option value="BJ">Class BJ - Ethics, Conduct of life</option>
+								<!--Class C Group-->
+								<option value="C">Class C - Auxiliary Sciences of History</option>
+								<option value="CT">Class CT - Biography</option>
+								<!--Class D to F Group-->
+								<option value="D">Class D to F - History</option>
+								<!--Class G Group-->
+								<option value="G">Class G - Geography</option>
+								<option value="G">Class G - Tourism</option>
+								<option value="GV">Class GV - Recreation, Sports, Games</option>
+								<!--Class H Group-->
+								<option value="H">Class H - Social Sciences</option>
+								<option value="HA">Class HA - Statistics</option>
+								<option value="HB">Class HB - Economic Theory</option>
+								<option value="HD">Class HD - Management, Supply Chain Management</option>
+								<option value="HE">Class HE - Transportation and Communication</option>
+								<option value="HF">Class HF - Accounting, Commerce, Marketing, Customer Services</option>
+								<option value="HG">Class HG - Finance, Banking, Insurance</option>
+								<option value="HJ">Class HJ - Public Finance, Taxation</option>
+								<!--Class J Group-->
+								<option value="J">Class J - Politics and Government</option>
+								<!--Class K Group-->
+								<option value="K">Class K - Law</option>
+								<option value="KNQ">Class KNQ - China Law</option>
+								<!--Class L Group-->
+								<option value="L">Class L - Education</option>
+								<!--Class M Group-->
+								<option value="M">Class M - Music</option>
+								<!--Class N Group-->
+								<option value="N">Class N - Visual Arts</option>
+								<option value="NC">Class NC - Drawing, Design, Illustration</option>
+								<option value="NK">Class NK - Decorative Arts, Applied Arts</option>
+								<!--Class P Group-->
+								<option value="P">Class P - Language and Literature</option>
+								<option value="PE">Class PE - English Language</option>
+								<option value="PL">Class PL - Chinese Language & Literature</option>
+								<option value="PN">Class PN - Motion Pictures, TV Programs, Movies</option>
+								<!--Class Q Group-->
+								<option value="Q">Class Q - Science</option>
+								<option value="QA">Class QA - Mathematics, Computer Science</option>
+								<option value="QC">Class QC - Physics</option>
+								<option value="QD">Class QD - Chemistry</option>
+								<option value="QE">Class QE - Geology</option>
+								<option value="QH">Class QH - Biology, Ecology</option>
+								<option value="QR">Class QR - Microbiology</option>
+								<!--Class R Group-->
+								<option value="R">Class R - Medicine</option>
+								<option value="RA">Class RA - Beauty, Fitness, Health</option>
+								<option value="RS">Class RS - Pharmary, Chinese Medicine</option>
+								<!--Class S Group-->
+								<option value="S">Class S - Agricluture</option>
+								<option value="SB">Class SB - Plant Culture, Gardening</option>
+								<option value="SF">Class SF - Animal Culture</option>
+								<!--Class T Group-->
+								<option value="T">Class T - General Technology</option>
+								<option value="TA">Class TA - Engineering, Civil Engineering</option>
+								<option value="TC">Class TC - Hydraulic Engineering</option>
+								<option value="TD">Class TD - Environmental Technology, Sanitary Engineering</option>
+								<option value="TJ">Class TJ - Mechanicial Engineering & Machinery</option>
+								<option value="TK">Class TK - Electrical Engineering, Electronics, Nuclear Engineering</option>
+								<option value="TP">Class TP - Chemical Technology</option>
+								<option value="TR">Class TR - 3-D Modeling, Photography</option>
+								<option value="TS">Class TS - Manufactures</option>
+								<option value="TX">Class TX - Hotel & Catering</option>
+								<!--Class U Group-->
+								<option value="U">Class U - Military Science</option>
+								<!--Class V Group-->
+								<option value="V">Class V - Naval Science</option>
+								<!--Class Z Group-->
+								<option value="Z">Class Z - Bibliography and Library Science</option>
+								
 							</select>
 						</div>
 					</div>
+					<!--
 					<div class="form-group">
 						<label for="yourEmail" class="col-sm-3 control-label">Email address</label>
 						<div class="col-sm-9">
@@ -248,14 +323,28 @@
 							<label><input type="checkbox">Subscribe Me !!!</label>
 						</div>
 					</div>
+					-->
 					<div class="clearfix">&nbsp;</div>
 					<div class="form-group">
 						<div class="col-sm-12 text-center">
-							<button type="submit" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-envelope"></span>&nbsp;Post It</button>
+							<button type="submit" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-circle-arrow-up"></span>&nbsp;Submit</button>
+							<button type="reset" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-repeat"></span>&nbsp;Reset</button>
 						</div>
 					</div>
 				</form>
 			</div>
+			<!--
+			<div class="row visible-lg-block">
+				<div class="col-md-12 col-lg-12">
+					<div class="panel panel-danger">
+						<div class="panel-heading">Search Results</div>
+						<div class="panel-body">
+						
+						</div>
+					</div>
+				</div>
+			</div>
+			-->
 		</div>
 
 		
